# SpotiLoad

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  bootstrap-boost.sh  build.sh  format.sh  loader.js  readme.md
include/runtime/: stdio.h
include/sp_load/: aggregator.hh  attach.hh  dll-main.hh  dll_main.hh  instance.hh  sp-id.hh  sp_id.hh  sp_types.hh  std_out.hh  track-info-aggregator.hh  track_info_aggregator.hh  utils.hh
include/sp_load/hooks/: bearer-refresh.hh  bearer_refresh.hh  build-track-ctx.hh  build_track_ctx.hh  create-player.hh  create_player.hh  install_hook.hh  playplay-aes-key.hh  playplay_aes_key.hh  structs.hh
src/: aggregator.cc  attach.cc  dll-main.cc  dll_main.cc  printf.cc
src/hooks/: aes_key_capture_stub.S  bearer-refresh.cc  bearer_refresh.cc  build-track-ctx.cc  build_track_ctx.cc  create-player.cc  create_player.cc  playplay-aes-key.cc  playplay_aes_key.cc
src/runtime/: process.cc
